force-app/main/default/objects/SBQQ__QuoteLine__c/fields/ACV__c.field-meta.xml
<CustomField>
    <fullName>ACV__c</fullName>
    <formula>IF(
AND(MOD(SBQQ__Quote__r.SBQQ__SubscriptionTerm__c, 12) != 0,License_Product__c=TRUE),
SBQQ__PackageTotal__c*(12/SBQQ__Quote__r.SBQQ__SubscriptionTerm__c),
IF(Bundle_Product__c=TRUE,Bundle_ACV__c,
SBQQ__PackageTotal__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>