force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Additional_Software_Product_Language__c.field-meta.xml
<CustomField>
    <fullName>Additional_Software_Product_Language__c</fullName>
    <label>Additional Software Product Language</label>
    <type>TextArea</type>
</CustomField>