force-app/main/default/objects/SBQQ__QuoteLine__c/fields/AVA_SFCPQ__Inclusive_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__Inclusive_Tax_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The tax amount indicated to be included on this product line item&apos;s total.</inlineHelpText>
    <label>Inclusive Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>