force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Bundle_ACV__c.field-meta.xml
<CustomField>
    <fullName>Bundle_ACV__c</fullName>
    <label>Bundle ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>