force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Bundle_Products__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Products__c</fullName>
    <label>Bundle Products</label>
    <type>TextArea</type>
</CustomField>