force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Bundle_Solution_Subscription_Value__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Solution_Subscription_Value__c</fullName>
    <description>Value of Bundle subscription value</description>
    <label>Bundle/Solution Subscription Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>