force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Bypass_PriceRule__c.field-meta.xml
<CustomField>
    <fullName>Bypass_PriceRule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to Bypass Static Bundle Price rule</description>
    <label>Bypass PriceRule</label>
    <type>Checkbox</type>
</CustomField>