force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Child_for_a_bundle__c.field-meta.xml
<CustomField>
    <fullName>Child_for_a_bundle__c</fullName>
    <formula>IF(
AND(
NOT(ISBLANK(Required_By_Product_Code__c)),
NOT(CONTAINS(Required_By_Product_Code__c, &apos;BU-01408&apos;))
), TRUE, FALSE )</formula>
    <label>Child for a bundle</label>
    <type>Checkbox</type>
</CustomField>