force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Customer_Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Customer_Grand_Total__c</fullName>
    <label>Customer Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>