force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Customer_Sale_Price_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sale_Price_Per_Month__c</fullName>
    <formula>SBQQ__CustomerPrice__c / Segment_Month_Decimal__c</formula>
    <label>Customer Sale Price Per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>