force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Customer_Unit_Price_Override__c.field-meta.xml
<CustomField>
    <fullName>Customer_Unit_Price_Override__c</fullName>
    <description>To override the Unit Price ;created as per BIZ-46890</description>
    <label>Customer Unit Price Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>