force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Discount_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Discount_Quote_Line__c</fullName>
    <formula>if(SBQQ__Discount__c=null,0,SBQQ__Discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount (Quote Line)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>