force-app/main/default/objects/SBQQ__QuoteLine__c/fields/End_Date_Output__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Output__c</fullName>
    <formula>IF (ISBLANK(SBQQ__EndDate__c),
ADDMONTHS (BLANKVALUE(SBQQ__StartDate__c,SBQQ__Quote__r.SBQQ__StartDate__c),SBQQ__Quote__r.SBQQ__SubscriptionTerm__c)-1,
SBQQ__EndDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date Output</label>
    <type>Date</type>
</CustomField>