force-app/main/default/objects/SBQQ__QuoteLine__c/fields/First_Segment_discount__c.field-meta.xml
<CustomField>
    <fullName>First_Segment_discount__c</fullName>
    <formula>IF(SBQQ__SegmentIndex__c=1, SBQQ__Discount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Segment discount</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>