force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Free_Month_Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Free_Month_Total_Discount__c</fullName>
    <formula>IF(  Free_Month_Discount__c &gt; 0, Free_Month_Discount__c *  SBQQ__Quantity__c * -1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Free Month Total Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>