force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Initial_Qty_Set__c.field-meta.xml
<CustomField>
    <fullName>Initial_Qty_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Qty Set</label>
    <type>Checkbox</type>
</CustomField>