force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Initial_Quantity_Based_On_Meter_Type__c.field-meta.xml
<CustomField>
    <fullName>Initial_Quantity_Based_On_Meter_Type__c</fullName>
    <formula>If(TEXT(Per_Integrations__c)=&apos;Lawyers&apos;, SBQQ__Quote__r.License_Band_Lawyers_Professionals__c,
	If(TEXT(Per_Integrations__c)=&apos;Fee Earners&apos;,SBQQ__Quote__r.License_Band_Fee_Earners__c,
		If(TEXT(Per_Integrations__c)=&apos;Revenue&apos;,SBQQ__Quote__r.License_Band_Revenue__c,1
		)
		)
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Quantity Based On Meter Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>