force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Item_Master_Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Master_Product_Number__c</fullName>
    <label>Item Master Product Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>