force-app/main/default/objects/SBQQ__QuoteLine__c/fields/License_Value__c.field-meta.xml
<CustomField>
    <fullName>License_Value__c</fullName>
    <formula>IF(License_Product__c=True, SBQQ__ListTotal__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>