force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Monthly_Net_Price_Currency__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Net_Price_Currency__c</fullName>
    <description>Used to map value from Quote Line to Opportunity Product</description>
    <formula>List_Price_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>