force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Net_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Unit_Price__c</fullName>
    <description>BIZ-46254</description>
    <formula>IF( 
ISPICKVAL(Guided_Selling_Type__c, &apos;Services&apos;),
SBQQ__NetTotal__c ,
(SBQQ__NetTotal__c / IF(SBQQ__SegmentIndex__c=  1, Segment_Months__c,12)) / SBQQ__EffectiveQuantity__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Monthly Net Unit Price</inlineHelpText>
    <label>Net Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>