force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Non_Std_Pkg__c.field-meta.xml
<CustomField>
    <fullName>Non_Std_Pkg__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Override checkbox for meter type.
as per BIZ-48435</description>
    <label>Non Std Pkg</label>
    <type>Checkbox</type>
</CustomField>