force-app/main/default/objects/SBQQ__QuoteLine__c/fields/One_Time_Credit__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Credit__c</fullName>
    <description>Dollar amount field for one-time credit.
created as part of BIZ-48004</description>
    <label>One Time Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>