force-app/main/default/objects/SBQQ__QuoteLine__c/fields/One_Time_Credit_Total__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Credit_Total__c</fullName>
    <formula>IF( One_Time_Credit__c &gt; 0, One_Time_Credit__c * -1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>One Time Credit Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>