force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Original_ACV_Change__c.field-meta.xml
<CustomField>
    <fullName>Original_ACV_Change__c</fullName>
    <description>The flow should update this Original ACV Change.BIZ-50365</description>
    <label>Original ACV Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>