force-app/main/default/objects/SBQQ__QuoteLine__c/fields/OSA_List_Price__c.field-meta.xml
<CustomField>
    <fullName>OSA_List_Price__c</fullName>
    <label>OSA List Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>