force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Platinum_Price__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Price__c</fullName>
    <label>Platinum Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>