force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Price_For_ACV_Across_Segment__c.field-meta.xml
<CustomField>
    <fullName>Price_For_ACV_Across_Segment__c</fullName>
    <description>BIZ-45090</description>
    <formula>(Price_For_ACV__c / (12 * Max_Of_Segment__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price For ACV Across Segment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>