force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Print_at_Quote__c.field-meta.xml
<CustomField>
    <fullName>Print_at_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Print at Quote</label>
    <type>Checkbox</type>
</CustomField>