force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Allocation_for_Static_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Product_Allocation_for_Static_Bundle__c</fullName>
    <description>This field will be used in Static Bundle price rule which ensures product allocation % is distributed properly in child line items</description>
    <label>Product Allocation for Static Bundle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>