force-app/main/default/objects/SBQQ__QuoteLine__c/fields/RunOnce__c.field-meta.xml
<CustomField>
    <fullName>RunOnce__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in PriceRule to execute once created as per BIZ-47422
Price Rule Name : Set Support Level to Standard for Software Products</description>
    <label>RunOnce</label>
    <type>Checkbox</type>
</CustomField>