force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Segment_Net_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Segment_Net_Unit_Price__c</fullName>
    <formula>IF(OR(ISPICKVAL(Product_Type__c, &apos;Software&apos;),ISPICKVAL(Product_Type__c, &apos;Software Discount&apos;)), SBQQ__NetTotal__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment Net Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>