force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Segment_with_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Segment_with_Product_Type__c</fullName>
    <formula>if(AND(  ISPICKVAL(Product_Type__c, &apos;Software&apos;),  SBQQ__SegmentIndex__c =1),1,
if(AND( ISPICKVAL(Product_Type__c, &apos;Software&apos;),  SBQQ__SegmentIndex__c =2),2,
if(AND( ISPICKVAL(Product_Type__c, &apos;Software&apos;),  SBQQ__SegmentIndex__c =3),3,
if(AND( ISPICKVAL(Product_Type__c, &apos;Software&apos;),  SBQQ__SegmentIndex__c =4),4,
if(AND( ISPICKVAL(Product_Type__c, &apos;Software&apos;),  SBQQ__SegmentIndex__c =5),5,
if(AND( ISPICKVAL(Product_Type__c, &apos;Software&apos;),  SBQQ__SegmentIndex__c =6),6,
0))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment with Product Type Software</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>