force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SegmentIndex_Year__c.field-meta.xml
<CustomField>
    <fullName>SegmentIndex_Year__c</fullName>
    <formula>IF( (SBQQ__Quote__r.SegmentIndex_Max_Value__c=0 || (SBQQ__Quote__r.SegmentIndex_Max_Value__c&gt;0 &amp;&amp; SBQQ__RequiredBy__c = NULL ) || SBQQ__RequiredBy__c != NULL) &amp;&amp; SBQQ__SegmentIndex__c == 0, 1, SBQQ__SegmentIndex__c )

/*
IF( (SBQQ__Quote__r.Extended_Initial_Term__c = FALSE || (SBQQ__Quote__r.Extended_Initial_Term__c = TRUE  &amp;&amp; SBQQ__RequiredBy__c = NULL ) ||  SBQQ__RequiredBy__c != NULL) &amp;&amp; SBQQ__SegmentIndex__c == 0,  1,  SBQQ__SegmentIndex__c   )

*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SegmentIndex (Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>