force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Solution_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Solution_Allocation__c</fullName>
    <formula>SBQQ__ProductOption__r.Solution_Allocation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solution Allocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>